fixed uneven margin with movie director

--- a/frontend/movie-frontend/src/App.css
+++ b/frontend/movie-frontend/src/App.css
@@ -76,5 +76,5 @@
 
 .movie-director {
   margin-left: auto;
-  width: fit-content
+  width: 300px;
 }
